# spare

./: README.md  pyproject.toml
.githooks/: pre-commit
src/spare/: common.py  main.py
src/spare/providers/: common.py  google_drive.py
